# trustaibrodotfun

./: .env.example  Anchor.toml  LICENSE  README.md  next.config.ts  package-lock.json  package.json
.orchids/: orchids.json
programs/neural_dilemma/: Cargo.toml  lib.rs
programs/trustaibro_program/: Anchor.toml
programs/trustaibro_program/programs/trustaibro_program/: Cargo.toml
programs/trustaibro_program/programs/trustaibro_program/src/: lib.rs
programs/trustaibro_program/tests/: trustaibro_program.ts
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/api/bet/: route.ts
src/app/api/match/: route.ts
src/app/api/settle/: route.ts
src/app/api/tournament/: route.ts
src/components/: AIAgentCard.tsx  AIAvatar.tsx  BattleArena.tsx  BettingPanel.tsx  Leaderboard.tsx  MatchSelector.tsx  PoolDeposit.tsx  TournamentBracket.tsx  WalletButton.tsx
src/hooks/: useBalance.ts  useMatchBattle.ts  useTournament.ts
src/lib/: ai-strategies.ts  game-engine.ts  tournament.ts  types.ts
src/lib/solana/: betting-client.ts  betting-types.ts  idl.ts  kalshi-markets.ts  trustaibro_program.json  trustaibro_program.ts  wallet-provider.tsx
