[package]
name = "neural_dilemma"
version = "0.1.0"
description = "AI Prisoner's Dilemma Tournament Betting Pool"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neural_dilemma"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
